# extension-version-watcher

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: check_extension.rs  extensions.rs  get_update.rs  main.rs  send_to_discord.rs
