[package]
name = "extension-version-watcher"
description = "rust program to check for updates in chrome extensions"
authors = ["staticallyamazing"]
license = "GPL-3.0-or-later"
version = "1.0.0"
repository = "https://github.com/staticallyamazing/extension-version-watcher"

edition = "2021"
publish = false

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"

tokio = { version = "1.28.0", features = ["full"] }
futures-util = "0.3.28"

serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
serde_json = "1.0.96"
xml-rs = "0.8.5"
regex = "1.8.1"

reqwest = "0.11.17"
twilight-http = "0.15.2"
twilight-model = "0.15.2"

walkdir = "2.3.3"
